<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/text_share"
        android:layout_width="0dp"
        android:hint="@string/input_your_text"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_btn" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/share_this_text"
        android:onClick="shareText"
        app:layout_constraintEnd_toEndOf="@+id/text_share"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_share"
        app:layout_constraintTop_toBottomOf="@+id/text_share" />

    <EditText
        android:id="@+id/location_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:textColorLink="@color/colorPrimary"
        android:hint="@string/input_your_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website_btn" />

    <Button
        android:id="@+id/location_btn"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/open_location"
        android:onClick="openLocation"
        app:layout_constraintEnd_toEndOf="@+id/location_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/location_text"
        app:layout_constraintTop_toBottomOf="@+id/location_text" />

    <EditText
        android:id="@+id/website_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="10dp"
        android:textColorLink="@color/colorPrimary"
        android:hint="@string/input_web_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/website_btn"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:text="@string/go_to_site"
        android:onClick="goToWebsite"
        app:layout_constraintEnd_toEndOf="@+id/website_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/website_text"
        app:layout_constraintTop_toBottomOf="@+id/website_text" />
</androidx.constraintlayout.widget.ConstraintLayout>